--- a/FrameWorks/Angular16/meu_primeiro_angular/src/app/template/header/header.component.html
+++ b/FrameWorks/Angular16/meu_primeiro_angular/src/app/template/header/header.component.html
@@ -2,4 +2,7 @@
     <a href="inicio">Início</a>
     <a href="produtos">Produtos</a>
     <a href="contato">Contato</a>
+    <a href="formulario">formulario</a>
+
+
 </nav>
